# nearpro

./: .env.example  .gitignore  check_cols.py  pyproject.toml  start_sync.py  vercel.json
Documentation/: harvest_architecture_spec.md  nearpro_build_roadmap.md
Documentation/Architecture/: architecture_breakdown.md  nearpro_v2_supabase_architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/css/: components.css  dashboard.css  layout.css  map.css  marketing.css  style.css
frontend/js/: api.js  app.js  auth.js  router.js  scoring.js  searchEngine.js  state.js  supabase.js
frontend/js/components/: AuthModal.js  CallScriptGenerator.js  (+38 more)
frontend/public/: robots.txt  sitemap.xml
supabase/: config.toml  profiles_migration.sql  rpc_functions.sql  schema.sql
supabase/migrations/: add_content_json_column.py  add_quotas_columns.py  backfill_conversion_scores.py  check_backfill_status.py  check_schema.py  run_documents_migration.py  run_migration.py  seed_templates.py  v3_complete_migration.sql  v3_hubspot_migration.py  v3_migration_00_backfill.sql  v3_migration_01_profiles.sql  v3_migration_02_lead_lists.sql  v3_migration_03_saved_leads.sql  v3_migration_04_documents.sql  v3_migration_05_opt_out_requests.sql  v3_migration_06_compliance_triggers.sql  v3_team_members_migration.sql  v3_webhook_migration.py  v3_zoho_migration.py  verify_migration.py
sync/: category_mapping.py  geo_utils.py  sync_to_supabase.py
tests/: run_tests.py  test_categories.py  test_frontend.js  test_geo.py  test_outreach_redesign.py  test_sync.py
(+11 files in other folders)
